# wizzmania

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WizzMania.qmlproject  WizzMania.qmlproject.qtds  WizzMania.qrc
.github/workflows/: notif.yml
WizzMania/: Constants.qml  qmldir
WizzMania/designer/: plugin.metainfo
WizzManiaContent/: App.qml  Screen01.ui.qml
controller/include/: ControllerMain.hpp  Mode.hpp
controller/src/: main.cpp
model/include/: Client.hpp  ModelMain.hpp  Server.hpp  Socket.hpp  Status.hpp
model/src/: Server.cpp
test/manualTest/serverTest/: CMakeLists.txt  main.cpp
test/manualTest/serverTest/model/include/: Client.hpp  NetworkEntity.hpp  Security.hpp  Server.hpp
test/manualTest/serverTest/model/src/: Server.cpp
view/include/: ClientView.hpp  CreateAccount.hpp  LoginView.hpp  ServerView.hpp  ViewMain.hpp  WelcomeScreen.hpp  mainwindow.hpp
view/src/: mainwindow.cpp
